  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.0.3 2022/11/xx
  - release - copy systemd files instead of soft linking
  - db.pl - fixed init not working with opensearch sometimes
  - viewer - fixed showing more than 10 roles
  - capture - on short runs field definitions weren't getting updated

4.0.2 2022/11/01
  - release - cyberchef 9.48.0
  - all - better console output sanitization
  - capture/viewer - Add TLS Certificate Organisational Unit field parsing (PR #2038)
  - capture - use arkime_update_geo.sh in error msg
  - capture - log error and exit if fields loading fails
  - release - Stop Configure from destroying systemd files

4.0.1 2022/10/18
  - addUser.js - remove WARNING adding first user
  - addUser.js - --webauthonly now sets header auth flag
  - all - better console output sanitization
  - capture - offline pcap allows more outstanding packets based on maxPacketsInQueue
  - db.pl - Fixed some OpenSearch compatibility
  - db.pl - Fixed upgrading to 4.x with no _moloch_shared user
  - viewer - Fix cert notbefore/notafter showing bad dates in sessions table

4.0.0 2022/10/11
  - BREAKING - Must be 3.3.0+ to upgrade to 4.x
  - BREAKING - systemd files auto installed, still need to enable
  - BREAKING - Move to roles for some permission checking,
               userAdmin role required to edit users
  - BREAKING - the version file lives in common directory now
  - BREAKING - new defaults maxFileSizeG=12, compressES=true
  - BREAKING - pcap compression is turned on by default, disable with simpleCompression=none
  - BREAKING - simpleGzipBlockSize renamed simpleCompressionBlockSize
  - BREAKING - right-click changed to value-actions in config