@@ -29,9 +29,12 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
 
 4.0.3 2022/11/xx
   - release - copy systemd files instead of soft linking
+  - releaes - capture/viewer systemd files now After opensearch/elasticsearch
+  - capture - on short runs field definitions weren't getting updated
+  - capture - s3 writer sets s3Compress to false with s3WriteGzip true
+  - cont3xt - fixed digest mode fetching settings from config file
   - db.pl - fixed init not working with opensearch sometimes
   - viewer - fixed showing more than 10 roles
-  - capture - on short runs field definitions weren't getting updated
 
 4.0.2 2022/11/01
   - release - cyberchef 9.48.0
